// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`API Endpoint Generators > generateDeleteEndpoint > generates correct output for basic collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { deleteShopProduct } from '../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const { productId } = getRouterParams(event)
  if (!productId) {
    throw createError({ status: 400, statusText: 'Missing product ID' })
  }

  const authTimer = timing.start('auth')
  const { team, user, membership } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const dbTimer = timing.start('db')
  const result = await deleteShopProduct(productId, team.id, user.id, { role: membership.role })
  dbTimer.end()
  return result
})"
`;

exports[`API Endpoint Generators > generateGetEndpoint > generates correct output for basic collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { getAllShopProducts, getShopProductsByIds } from '../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const authTimer = timing.start('auth')
  const { team } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const query = getQuery(event)

  const dbTimer = timing.start('db')
  if (query.ids) {
    const ids = String(query.ids).split(',')
    const result = await getShopProductsByIds(team.id, ids)
    dbTimer.end()
    return result
  }

  const result = await getAllShopProducts(team.id)
  dbTimer.end()
  return result
})"
`;

exports[`API Endpoint Generators > generateMoveEndpoint > generates correct output for hierarchy collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { updatePositionShopCategory } from '../../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const { categoryId } = getRouterParams(event)
  if (!categoryId) {
    throw createError({ status: 400, statusText: 'Missing category ID' })
  }

  const authTimer = timing.start('auth')
  const { team } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const body = await readBody(event)

  // Validate input
  if (body.order === undefined || typeof body.order !== 'number') {
    throw createError({ status: 400, statusText: 'order is required and must be a number' })
  }

  // parentId can be null (move to root) or a valid ID
  const parentId = body.parentId ?? null

  const dbTimer = timing.start('db')
  const result = await updatePositionShopCategory(team.id, categoryId, parentId, body.order)
  dbTimer.end()
  return result
})"
`;

exports[`API Endpoint Generators > generatePatchEndpoint > generates correct output for basic collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { updateShopProduct } from '../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'
import type { ShopProduct } from '../../../../../types'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const { productId } = getRouterParams(event)
  if (!productId) {
    throw createError({ status: 400, statusText: 'Missing product ID' })
  }

  const authTimer = timing.start('auth')
  const { team, user, membership } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const body = await readBody<Partial<ShopProduct>>(event)

  const dbTimer = timing.start('db')
  const result = await updateShopProduct(productId, team.id, user.id, {
    name: body.name,
    description: body.description,
    price: body.price,
    active: body.active
  }, { role: membership.role })
  dbTimer.end()
  return result
})"
`;

exports[`API Endpoint Generators > generatePostEndpoint > generates correct output for basic collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { createShopProduct } from '../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const authTimer = timing.start('auth')
  const { team, user } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const body = await readBody(event)

  // Exclude id field to let the database generate it
  const { id, ...dataWithoutId } = body

  const dbTimer = timing.start('db')
  const result = await createShopProduct({
    ...dataWithoutId,
    teamId: team.id,
    owner: user.id,
    createdBy: user.id,
    updatedBy: user.id
  })
  dbTimer.end()
  return result
})"
`;

exports[`API Endpoint Generators > generateReorderEndpoint > generates correct output for hierarchy collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { reorderSiblingsShopCategories } from '../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const authTimer = timing.start('auth')
  const { team } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const body = await readBody(event)

  // Validate input - expect array of { id, order }
  if (!Array.isArray(body.updates)) {
    throw createError({ status: 400, statusText: 'updates must be an array' })
  }

  for (const update of body.updates) {
    if (!update.id || typeof update.order !== 'number') {
      throw createError({
        status: 400,
        statusText: 'Each update must have id and order (number)'
      })
    }
  }

  const dbTimer = timing.start('db')
  const result = await reorderSiblingsShopCategories(team.id, body.updates)
  dbTimer.end()
  return result
})"
`;

exports[`API Endpoint Generators > generateReorderEndpoint > generates correct output for sortable collection 1`] = `
"// Team-based endpoint - requires @fyit/crouton-auth package
// The resolveTeamAndCheckMembership utility handles team resolution and auth
import { reorderSiblingsShopTags } from '../../../../database/queries'
import { resolveTeamAndCheckMembership } from '@fyit/crouton-auth/server/utils/team'

export default defineEventHandler(async (event) => {
  const timing = useServerTiming(event)

  const authTimer = timing.start('auth')
  const { team } = await resolveTeamAndCheckMembership(event)
  authTimer.end()

  const body = await readBody(event)

  // Validate input - expect array of { id, order }
  if (!Array.isArray(body.updates)) {
    throw createError({ status: 400, statusText: 'updates must be an array' })
  }

  for (const update of body.updates) {
    if (!update.id || typeof update.order !== 'number') {
      throw createError({
        status: 400,
        statusText: 'Each update must have id and order (number)'
      })
    }
  }

  const dbTimer = timing.start('db')
  const result = await reorderSiblingsShopTags(team.id, body.updates)
  dbTimer.end()
  return result
})"
`;
